working from local

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Thank you!</textarea>
     </div>
 
     <!-- Include the Epson ePOS SDK -->
-    <script src="https://js-cdn.epson-biz.com/js/epos-2.23.0.js"></script>
+    <script src="./epos-2.18.0.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
