--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Security policy to allow printer connections -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval';"> -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src http://10.0.4.14; style-src http://10.0.4.14; connect-src http://10.0.4.14; img-src http://10.0.4.14; font-src http://10.0.4.14;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' http://10.0.4.14; style-src 'self' http://10.0.4.14; connect-src 'self' http://10.0.4.14; img-src 'self' http://10.0.4.14; font-src 'self' http://10.0.4.14;">
     <!-- GitHub Pages metadata -->
     <meta name="description" content="Web app for printing to Epson TM-M30II thermal printers">
     <meta name="keywords" content="epson, printer, thermal printer, tm-m30ii, pos printer">
