--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Security policy to allow printer connections -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval';"> -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://10.0.4.14; style-src 'self' https://10.0.4.14; connect-src 'self' https://10.0.4.14:8043 wss://10.0.4.14:8043; img-src 'self' https://10.0.4.14; font-src 'self' https://10.0.4.14;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://10.0.4.14 'unsafe-eval'; style-src 'self' https://10.0.4.14; connect-src 'self' https://10.0.4.14:8043 wss://10.0.4.14:8043; img-src 'self' https://10.0.4.14; font-src 'self' https://10.0.4.14;">
+
 
     <!-- GitHub Pages metadata -->
     <meta name="description" content="Web app for printing to Epson TM-M30II thermal printers">
