--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Security policy to allow printer connections -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval';"> -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://10.0.4.14 'unsafe-eval'; style-src 'self' https://10.0.4.14; connect-src 'self' https://10.0.4.14 https://10.0.4.14:8043 wss://10.0.4.14:8043; img-src 'self' https://10.0.4.14; font-src 'self' https://10.0.4.14;"> -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://10.0.4.222 'unsafe-eval'; style-src 'self' https://10.0.4.222; connect-src 'self' https://10.0.4.222 https://10.0.4.222:8043 wss://10.0.4.222:8043; img-src 'self' https://10.0.4.222; font-src 'self' https://10.0.4.222;">
 
 
     <!-- GitHub Pages metadata -->
@@ -33,7 +33,7 @@
             <h2>Printer Configuration</h2>
             <div class="form-group">
                 <label for="printerIP">Printer IP Address:</label>
-                <input type="text" id="printerIP" placeholder="192.168.1.xxx" value="10.0.4.14">
+                <input type="text" id="printerIP" placeholder="192.168.1.xxx" value="10.0.4.222">
             </div>
             <div class="form-group">
                 <label for="printerPort">Printer Port:</label>
